potenitally fixed layout issue?

--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,19 @@ body {
     font-family: 'Montserrat', sans-serif;
     min-height: 100vh;
     min-width: 100vw;
-    overflow: hidden;
     background-color: var(--offwhite);
 }
 
-/* CSS */
+.example::-webkit-scrollbar {
+    display: none;
+  }
+  
+
+  .example {
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
+  }
+
 .topbutton{
   align-items: center;
   background-image: linear-gradient(135deg, var(--three) 20%, var(--three));
@@ -157,6 +165,8 @@ button{
 
 .card > div {
     grid-row: 2/3;
+    padding: 5px;
+    text-align: center;
 }
 .header{
 display: grid;
